--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: PICOVERAVR's Thoughts
+description: A personal website to say things and work on writing skills.
