cleaned up main page

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: PICOVERAVR's Thoughts
+author: PICOVERAVR
 description: A personal website to say things and work on writing skills.
